--- a/samcli/local/init/templates/cookiecutter-aws-sam-hello-dotnet/{{cookiecutter.project_name}}/test/HelloWorld.Test/HelloWorld.Tests.csproj
+++ b/samcli/local/init/templates/cookiecutter-aws-sam-hello-dotnet/{{cookiecutter.project_name}}/test/HelloWorld.Test/HelloWorld.Tests.csproj
@@ -1,7 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    {%- if cookiecutter.runtime == 'dotnetcore2.0' %}
     <TargetFramework>netcoreapp2.0</TargetFramework>
+    {%- else %}
+    <TargetFramework>netcoreapp2.1</TargetFramework>
+    {%- endif %}
   </PropertyGroup>
 
   <ItemGroup>
@@ -19,3 +23,4 @@
   </ItemGroup>
 
 </Project>
+
