--- a/tests/integration/testdata/invoke/template.yml
+++ b/tests/integration/testdata/invoke/template.yml
@@ -100,6 +100,9 @@ Resources:
           Region: !Ref "AWS::Region"
           AccountId: !Ref "AWS::AccountId"
           Partition: !Ref "AWS::Partition"
+          StackName: !Ref "AWS::StackName"
+          StackId: !Ref "AWS::StackId"
+          URLSuffix: !Ref "AWS::URLSuffix"
           Timeout: !Ref DefaultTimeout
           MyRuntimeVersion: !Ref MyRuntimeVersion
 
