--- a/samcli/local/init/templates/cookiecutter-aws-sam-hello-dotnet/{{cookiecutter.project_name}}/template.yaml
+++ b/samcli/local/init/templates/cookiecutter-aws-sam-hello-dotnet/{{cookiecutter.project_name}}/template.yaml
@@ -14,7 +14,7 @@ Resources:
     HelloWorldFunction:
         Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
         Properties:
-            CodeUri: src/HelloWorld/bin/Debug/netcoreapp2.0/publish
+            CodeUri: ./artifacts/HelloWorld.zip
             Handler: HelloWorld::HelloWorld.Function::FunctionHandler
             {%- if cookiecutter.runtime == 'dotnetcore2.0' %}
             Runtime: {{ cookiecutter.runtime }}
