--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,6 +1,6 @@
 version: 1.0.{build}
 image: Visual Studio 2017
 install:
-- %PYTHON%\python.exe -m pip -e install '.[dev]'
+- "%PYTHON%\\python.exe -m pip -e install '.[dev]'"
 test_script:
-- %PYTHON%\pytest tests/unit
+- "%PYTHON%\\pytest tests\\unit"
