--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,10 +1,10 @@
 version: 1.0.{build}
 image: Visual Studio 2017
-#environment:
-#  matrix:
-#    - PYTHON: "C:\\Python36-x64"
-#      PYTHON_VERSION: "3.6.6"
-#      PYTHON_ARCH: "64"
+environment:
+  matrix:
+    - PYTHON: "C:\\Python36-x64"
+      PYTHON_VERSION: "3.6.6"
+      PYTHON_ARCH: "64"
 install:
 - "%PYTHON%\\python.exe --version"
 test_script:
