--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,4 +1,4 @@
 version: 1.0.{build}
 image: Visual Studio 2017
-build: 
-- "docker run hello-world:linux"
+build_script:
+- docker run hello-world:linux
