--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,4 +1,7 @@
 version: 1.0.{build}
 image: Visual Studio 2017
+install:
+- docker version
 build_script:
-- docker run hello-world:linux
+- docker run hello-world
+- docker image hello-world
