--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -2,6 +2,7 @@ version: 1.0.{build}
 image: Visual Studio 2017
 install:
 - docker version
+- docker info
 build_script:
-- docker run hello-world
+- docker run --platform linux hello-world:linux
 - docker image hello-world
