--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -2,6 +2,8 @@ version: 1.0.{build}
 image: ubuntu
 stack: python 3.7.0
 build: off
+environment:
+  AWS_REGION: us-east-1
 install:
 - pip install -e '.[dev]'
 test_script:
