--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -3,7 +3,7 @@ image: ubuntu
 stack: python 3.7.0
 build: off
 environment:
-  AWS_REGION: us-east-1
+  AWS_DEFAULT_REGION: us-east-1
 install:
 - pip install -e '.[dev]'
 test_script:
