--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,7 @@
 include LICENSE
 include requirements/base.txt
 include requirements/dev.txt
+include samcli/config/schema.json
 recursive-include samcli/local/init/templates *
 recursive-include samcli/lib *.json
 recursive-include samcli/commands/local/lib/generated_sample_events *.json
