--- a/.travis.yml
+++ b/.travis.yml
@@ -27,4 +27,4 @@ install:
 script:
   # Runs unit tests
   - make pr
-  - travis_wait make integ-test
+  - travis_wait SAM_CLI_DEV=1 pytest -vv tests/integration
