Fix: Travis times out when running Integ tests (#739)
Travis expects output from commands and if no ouput is recieved,
Travis kills the build thinking command has stalled. Some of our
integ tests cause this issue in travis: https://travis-ci.org/awslabs/aws-sam-cli/jobs/447830765

This commit adds travis_wait to our integ test command. Details on
this can be found here: https://docs.travis-ci.com/user/common-build-problems/#my-builds-are-timing-out

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,4 +27,4 @@ install:
 script:
   # Runs unit tests
   - make pr
-  - make integ-test
+  - SAM_CLI_DEV=1 travis_wait pytest -vv tests/integration
