Integration test for 'sam build'

--- a/.gitignore
+++ b/.gitignore
@@ -378,5 +378,7 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+# Temporary scratch directory used by the tests
+tests/integration/buildcmd/scratch
 
 # End of https://www.gitignore.io/api/osx,node,macos,linux,python,windows,pycharm,intellij,sublimetext,visualstudiocode
