feat: Support for Lambda Layers, Ruby2.5, Python3.7, and Custom Runtimes

--- a/samcli/local/init/templates/cookiecutter-aws-sam-hello-python/{{cookiecutter.project_name}}/template.yaml
+++ b/samcli/local/init/templates/cookiecutter-aws-sam-hello-python/{{cookiecutter.project_name}}/template.yaml
@@ -20,8 +20,10 @@ Resources:
             Handler: app.lambda_handler
             {%- if cookiecutter.runtime == 'python2.7' %}
             Runtime: python2.7
-            {%- else %}
+            {%- elif cookiecutter.runtime == 'python3.6' %}
             Runtime: python3.6
+            {%- else %}
+            Runtime: python3.7
             {%- endif %}
             Environment: # More info about Env Vars: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#environment-object
                 Variables:
