--- a/tests/integration/testdata/invoke/runtimes/template.yaml
+++ b/tests/integration/testdata/invoke/runtimes/template.yaml
@@ -17,3 +17,17 @@ Resources:
       Runtime: java8
       CodeUri: ./java8/target/HelloWorld-1.0.jar
       Timeout: 300
+
+  CustomBashFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      Handler: hello.echo_request
+      Runtime: provided
+      CodeUri: ./custom_bash
+      Timeout: 300
+      Events:
+        MyApi:
+          Type: Api
+          Properties:
+            Path: /
+            Method: GET
