--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,11 @@ matrix:
       dist: xenial
       sudo: true
 
+before_install:
+  - nvm install 8.10
+  - npm --version
+  - node --version
+
 install:
   # Install the code requirements
   - make init
