Added updates from code review

--- a/samcli/local/init/templates/cookiecutter-aws-sam-hello-powershell/.gitignore
+++ b/samcli/local/init/templates/cookiecutter-aws-sam-hello-powershell/.gitignore
@@ -164,5 +164,11 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+# Exclude packaged modules
+*.zip
+
+# Exclude .NET assemblies from source
+*.dll
+
 
 # End of https://www.gitignore.io/api/osx,linux,python,windows
