--- a/tests/integration/testdata/publish/template_create_app.yaml
+++ b/tests/integration/testdata/publish/template_create_app.yaml
@@ -16,7 +16,7 @@ Metadata:
     - test-app
     LicenseUrl: s3://<bucket-name>/LICENSE
     Name: <application-name>
-    ReadmeUrl: s3://<bucket-name>/README.rst
+    ReadmeUrl: s3://<bucket-name>/README.md
     SemanticVersion: 0.0.1
     SourceCodeUrl: https://github.com/test/test
 Resources:
